--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-redis==5.2.0
 django-storages==1.13.2
 idna==3.4
 oauthlib==3.2.2
+Pillow==9.5.0
 python-decouple==3.8
 redis==4.5.5
 requests==2.31.0
