--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,31 @@
-asgiref
-async-timeout
-certifi
-charset-normalizer
-Django
-django-redis
-django-storages
-djangorestframework
-idna
-numpy
-oauthlib
-packaging
-pandas
-Pillow
-python-dateutil
-python-decouple
-pytz
-redis
-requests
-requests-oauthlib
-setuptools-scm
-six
-sqlparse
-tomli
-typing_extensions
-tzdata
-urllib3
-wrapt
+asgiref==3.7.2
+async-timeout==4.0.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+Django==4.2.2
+django-cors-headers==4.1.0
+django-redis==5.2.0
+django-storages==1.13.2
+djangorestframework==3.14.0
+et-xmlfile==1.1.0
+idna==3.4
+numpy==1.24.3
+oauthlib==3.2.2
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+python-dateutil==2.8.2
+python-decouple==3.8
+pytz==2023.3
+redis==4.5.5
+requests==2.31.0
+requests-oauthlib==1.3.1
+setuptools-scm==7.1.0
+six==1.16.0
+sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==2.0.3
+wrapt==1.15.0
